--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <div class="container" align="center">
         <ul>
-          <li>Coffee</li>
+          <li><a href="https://github.com/ushdjkfnf/ushdjkfnf.github.io/projects/7">Application & Data</li>
           <li>Tea</li>
           <li>Milk</li>
         </ul>
