--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <div class="container" align="center">
         <ul>
           <li><a href="https://github.com/ushdjkfnf/ushdjkfnf.github.io/projects/7">Application & Data</li>
+          <li><a href="https://github.com/ushdjkfnf/ushdjkfnf.github.io/projects/14">Internet</li>
           <li>Tea</li>
           <li>Milk</li>
         </ul>
