--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 
     <div class="container" align="center">
         <ul>
-          <li><a href="https://github.com/ushdjkfnf/ushdjkfnf.github.io/projects/7">Application & Data</li>
+          <li><a href="https://github.com/ushdjkfnf/ushdjkfnf.github.io/projects/7">Tech Stacks</li>
+          <li><a href="https://github.com/ushdjkfnf/ushdjkfnf.github.io/projects/7">Tools</li>
           <li><a href="https://github.com/ushdjkfnf/ushdjkfnf.github.io/projects/14">Internet</li>
         </ul>
 
