--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
     <div class="container" align="center">
         <ul>
-          <li><a href="https://github.com/ushdjkfnf/ushdjkfnf.github.io/projects/7">Tech Stacks</li>
-          <li><a href="https://github.com/ushdjkfnf/ushdjkfnf.github.io/projects/9">Tools</li>
-          <li><a href="https://github.com/ushdjkfnf/ushdjkfnf.github.io/projects/14">Internet</li>
+          <li><a href="https://github.com/ushdjkfnf/ushdjkfnf.github.io/projects/6#column-7399166">Tech Stacks</li>
+          <li><a href="https://github.com/ushdjkfnf/ushdjkfnf.github.io/projects/6#column-7399168">Tools</li>
+          <li><a href="https://github.com/ushdjkfnf/ushdjkfnf.github.io/projects/6#column-7400017">Internet</li>
         </ul>
 
     </div>
